--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"author": "Justin Carver <justin.carver@hotmail.com>",
 	"license": "MIT",
 	"dependencies": {
+		"commander": "^10.0.0",
 		"dotenv": "^16.0.3",
 		"inquirer": "^9.1.4",
 		"inquirer-autocomplete-prompt": "^3.0.0",
